--- a/XXXXX_basic/templates/XXXXX_basic/shared/head.html
+++ b/XXXXX_basic/templates/XXXXX_basic/shared/head.html
@@ -11,18 +11,20 @@
 <meta property="og:site_name" content="{{ HOST }}" />
 <link rel="canonical" href="https://{{ HOST }}">
 {% include "./favicon.html" %}
-<script type="text/javascript">
-      (function(){
-            var randomh=Math.random();
-            var e = document.getElementsByTagName("script")[0];
-            var d = document.createElement("script");
-            d.src = "https://smarketapi.com/js/eLgnUuyTHbS4pL7n.js?r="+randomh+"";
-            d.type = "text/javascript";
-            d.async = true;
-            d.defer = true;
-            e.parentNode.insertBefore(d,e);
-      })();
-</script>
+{% if SMARKETMAN_LINK %}
+      <script type="text/javascript">
+            (function(){
+                  var randomh=Math.random();
+                  var e = document.getElementsByTagName("script")[0];
+                  var d = document.createElement("script");
+                  d.src = "https://smarketapi.com/js/eLgnUuyTHbS4pL7n.js?r="+randomh+"";
+                  d.type = "text/javascript";
+                  d.async = true;
+                  d.defer = true;
+                  e.parentNode.insertBefore(d,e);
+            })();
+      </script>
+{% endif %}
 <script src="{% static 'js/fontawesome/solid.js'|local_static:APP_DIRECTORY %}"></script>
 <script src="{% static 'js/fontawesome/fontawesome.js'|local_static:APP_DIRECTORY %}"></script>
 {% if GOOGLE_ANALYTICS_ID %}
