--- a/XXXXX_basic/templates/XXXXX_basic/shared/notifications.html
+++ b/XXXXX_basic/templates/XXXXX_basic/shared/notifications.html
@@ -1,21 +1,27 @@
 {% if messages %}
-    {% for notification in messages %}
-        <div class="alert alert-dismissible fade show {% if notification.tags %}alert-{% if notification.level_tag == 'error' %}danger{% else %}{{ notification.level_tag }}{% endif %}{% endif %}">
-            {{ message }}
-            <button type="button"
-                    class="btn-close"
-                    data-bs-dismiss="alert"
-                    aria-label="Close"></button>
-        </div>
+    {% for notification in messages %}  
+        <nav class="notificationBackground notificationBackground-{% if notification.tags %}{{ notification.level_tag }}{% endif %}">
+            <ul>
+            <li class="notificationMessage">
+                test
+            </li>
+            </ul>    
+            <ul class="topNavRight">
+                <li class="notificationExit">X</li>
+            </ul>
+        </nav>
     {% endfor %}
 {% endif %}
+
 <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      (document.querySelectorAll('.notification .delete') || []).forEach(($delete) => {
-        let $notification = $delete.parentNode;
-        $delete.addEventListener('click', () => {
-          $notification.parentNode.removeChild($notification);
+    var exits = document.getElementsByClassName('topNavRight');
+
+    for(let i = 0; i < exits.length; i++){
+        exits[i].addEventListener('click', function(){
+            this.parentNode.classList.add('fadeOut');
+            setTimeout(() => {
+                this.parentNode.parentNode.removeChild(this.parentNode);
+            }, 500);
         });
-      });
-    });
+    }
 </script>
