--- a/XXXXX_signedin/templates/XXXXX_signedin/shared/head.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/shared/head.html
@@ -11,6 +11,11 @@
 <meta property="og:site_name" content="{{ HOST }}" />
 <link rel="canonical" href="https://{{ HOST }}">
 {% include "./favicon.html" %}
+
+{% if captcha %}
+      <script src="https://www.google.com/recaptcha/enterprise.js?render={{ captcha }}"></script>
+{% endif %}
+
 {% if SMARKETMAN_LINK %}
       <script type="text/javascript">
             (function(){
@@ -38,3 +43,7 @@
       gtag('config', '{{ GOOGLE_ANALYTICS_ID  }}');
     </script>
 {% endif %}
+
+<link rel="stylesheet" href="{% static 'css/pico.min.css'|local_static:APP_DIRECTORY %}" />
+<link rel="stylesheet" href="{% static 'css/styles.css'|local_static:APP_DIRECTORY %}" />
+
