--- a/XXXXX_signedin/templates/XXXXX_signedin/shared/top_nav.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/shared/top_nav.html
@@ -1,36 +1,24 @@
 {% load group_tags %}
-<nav class="navbar navbar-light navbar-expand-md bg-white shadow-sm">
-    <div class="container">
-        <a class="navbar-brand" href="{% url 'home' %}">{{ HOST }}</a>
-        <button class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end"
-             id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-                {% if not request.user.is_anonymous %}
-                    <li class="nav-item">{{ request.user.email }}</li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ request|get_dashboard_url }}">Dashboard</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'account_signup' %}">Signup/Login</a>
-                    </li>
-                {% endif %}
-                <li class="nav-item">
-                    <a class="nav-link" href="https://www.youtube.com/@darefail">How To (Youtube)</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://twitter.com/darefailed">Me (Twitter)</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+
+<nav>
+    <ul>
+      <li><strong><a class="noLinkDecoration" href="{% url 'home' %}">{{ HOST }}</a></strong></li>
+    </ul>
+    <ul>
+        <li>
+          <a href="https://www.youtube.com/@darefail"><svg class="youtubeIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"/></svg></a></li>
+        <li>
+          <a href="https://twitter.com/darefailed"><svg class="twitterIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M459.4 151.7c.3 4.5 .3 9.1 .3 13.6 0 138.7-105.6 298.6-298.6 298.6-59.5 0-114.7-17.2-161.1-47.1 8.4 1 16.6 1.3 25.3 1.3 49.1 0 94.2-16.6 130.3-44.8-46.1-1-84.8-31.2-98.1-72.8 6.5 1 13 1.6 19.8 1.6 9.4 0 18.8-1.3 27.6-3.6-48.1-9.7-84.1-52-84.1-103v-1.3c14 7.8 30.2 12.7 47.4 13.3-28.3-18.8-46.8-51-46.8-87.4 0-19.5 5.2-37.4 14.3-53 51.7 63.7 129.3 105.3 216.4 109.8-1.6-7.8-2.6-15.9-2.6-24 0-57.8 46.8-104.9 104.9-104.9 30.2 0 57.5 12.7 76.7 33.1 23.7-4.5 46.5-13.3 66.6-25.3-7.8 24.4-24.4 44.8-46.1 57.8 21.1-2.3 41.6-8.1 60.4-16.2-14.3 20.8-32.2 39.3-52.6 54.3z"/></svg></a>
+        </li>
+        <li>
+          <a href="https://github.com/DareFail/AI-Video-Boilerplate-Pro">Github</a>
+        </li>
+        <li>
+          {% if not request.user.is_anonymous %}
+            <button class="contrast" onclick="location='{% url 'account_signup' %}'">Login</button>
+          {% else %}
+            <button class="contrast" onclick="location='{{ request|get_dashboard_url }}'">Dashboard</button>
+          {% endif %}
+        </li>
+    </ul>
 </nav>
