--- a/XXXXX_websockets/templates/XXXXX_websockets/room.html
+++ b/XXXXX_websockets/templates/XXXXX_websockets/room.html
@@ -1,18 +1,35 @@
+{% load static %}
+{% load static_tags %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="description" content="">
-        <title>Chat Room</title>
+        {% include "./shared/head.html" %}
     </head>
     <body>
-        <textarea id="chat-log" cols="100" rows="20"></textarea>
-        <br>
-        <input id="chat-message-input" type="text" size="100">
-        <br>
-        <input id="chat-message-submit" type="button" value="Send">
-        {{ room_name|json_script:"room-name" }}
-        <script>
+        {% include "./shared/notifications.html" %}
+        <div class="container">
+          {% include "./shared/top_nav.html" %}
+        
+          <div>
+            <h1>Chat Room</h1>
+
+            <textarea id="chat-log" cols="100" rows="20"></textarea>
+
+            <input id="chat-message-input" type="text" size="100">
+
+            <input id="chat-message-submit" type="button" value="Send">
+            
+            <div>
+                {{ room_name|json_script:"room-name" }}
+            </div>
+        
+          </div>
+
+          {% include "./shared/footer.html" %}
+        </div>
+    </body>
+
+    <script>
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
         const chatSocket = new WebSocket(
@@ -47,6 +64,9 @@
             }));
             messageInputDom.value = '';
         };
-        </script>
-    </body>
+    </script>
 </html>
+
+
+
+    
