--- a/homepage/templates/homepage/shared/head.html
+++ b/homepage/templates/homepage/shared/head.html
@@ -12,6 +12,10 @@
 <link rel="canonical" href="https://{{ HOST }}">
 {% include "./favicon.html" %}
 
+{% if captcha %}
+      <script src="https://www.google.com/recaptcha/enterprise.js?render={{ captcha }}"></script>
+{% endif %}
+
 {% if SMARKETMAN_LINK %}
       <script type="text/javascript">
             (function(){
@@ -39,3 +43,7 @@
       gtag('config', '{{ GOOGLE_ANALYTICS_ID  }}');
     </script>
 {% endif %}
+
+<link rel="stylesheet" href="{% static 'css/pico.min.css'|local_static:APP_DIRECTORY %}" />
+<link rel="stylesheet" href="{% static 'css/styles.css'|local_static:APP_DIRECTORY %}" />
+
