--- a/rateloaf/templates/rateloaf/shared/head.html
+++ b/rateloaf/templates/rateloaf/shared/head.html
@@ -12,6 +12,10 @@
 <link rel="canonical" href="https://{{ HOST }}">
 {% include "./favicon.html" %}
 
+{% if captcha %}
+      <script src="https://www.google.com/recaptcha/enterprise.js?render={{ captcha }}"></script>
+{% endif %}
+
 {% if SMARKETMAN_LINK %}
       <script type="text/javascript">
             (function(){
@@ -39,7 +43,7 @@
       gtag('config', '{{ GOOGLE_ANALYTICS_ID  }}');
     </script>
 {% endif %}
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous">
+
+<link rel="stylesheet" href="{% static 'css/pico.min.css'|local_static:APP_DIRECTORY %}" />
+<link rel="stylesheet" href="{% static 'css/styles.css'|local_static:APP_DIRECTORY %}" />
+
