--- a/XXXXX_signedin/templates/XXXXX_signedin/signedin/index.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/signedin/index.html
@@ -2,16 +2,90 @@
 {% load static_tags %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>{% include "../shared/head.html" %}</head>
+    <head>
+        {% include "../shared/head.html" %}
+    </head>
     <body>
-        {% include "../shared/top_nav.html" %}
         {% include "../shared/notifications.html" %}
-        <div class="container my-3">
-            <div class="row">
-                <div class="col-xxl-2 col-lg-3">{% include "./shared/side_nav.html" %}</div>
-                <div class="col-lg">Logged in Dashboard Home</div>
+        <div class="container">
+          {% include "../shared/top_nav.html" %}
+        
+        <div>
+            <div role="group">
+                <div id="leftNav">{% include "./shared/side_nav.html" %}</div>
+                <div id="dashboardContent">
+                    Logged in Dashboard Home
+
+
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+
+                <div>Logged in Dashboard Home</div>
+
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+
+                <div>Logged in Dashboard Home</div>
+
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+
+                <div>Logged in Dashboard Home</div>
+
+                <div>Logged in Dashboard Home</div>
+                <div>Logged in Dashboard Home</div>
+
+                </div>
             </div>
         </div>
-        {% include "../shared/footer.html" %}
+
+          {% include "../shared/footer.html" %}
+        </div>
     </body>
 </html>
+
+
+
+    
