--- a/XXXXX_signedin/templates/XXXXX_signedin/account/signup.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/account/signup.html
@@ -3,10 +3,10 @@
 {% load form_tags %}
 {% load allauth account %}
 {% load socialaccount %}
-<div class="container d-flex justify-content-center my-3">
+<div class="container">
     <div>
         <h3>Sign Up</h3>
-        <form method="post" class="mt-3">
+        <form method="post">
             {% csrf_token %}
             {{ form.non_field_errors }}
             {% render_text_input form.email %}
@@ -20,20 +20,20 @@
                        value="{{ request.GET.invitation_id }}">
                 {{ form.invitation_id.errors }}
             {% endif %}
-            <input class="btn btn-primary w-100" type="submit" value="Sign Up">
+            <input type="submit" value="Sign Up">
             {% comment %}
                 <hr />
-                <div class="text-center mb-4">
-                    <a class="btn btn-secondary" href="{% provider_login_url 'google' method='oauth2' %}">Sign up with Google</a>
+                <div>
+                    <a href="{% provider_login_url 'google' method='oauth2' %}">Sign up with Google</a>
                 </div>
-                <div class="text-center">
-                    <a class="btn btn-secondary" href="{% provider_login_url 'microsoft' method='oauth2' %}">Sign up with Microsoft</a>
+                <div>
+                    <a href="{% provider_login_url 'microsoft' method='oauth2' %}">Sign up with Microsoft</a>
                 </div>
             {% endcomment %}
             <hr />
-            <div class="has-text-grey">
+            <div>
                 Already have account?
-                <a class="muted-link" href="{% url 'account_login' %}">Go to sign in.</a>
+                <a href="{% url 'account_login' %}">Go to sign in.</a>
             </div>
         </form>
     </div>
