--- a/XXXXX_signedin/templates/XXXXX_signedin/index.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/index.html
@@ -14,6 +14,8 @@
             <h1>Signedin Template</h1>
 
             <div>Front Page</div>
+            {% include "./shared/contact.html" %}
+            {% include "./shared/contact_captcha.html" %}
           </div>
 
           {% include "./shared/footer.html" %}
