--- a/XXXXX_signedin/templates/XXXXX_signedin/shared/contact_captcha.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/shared/contact_captcha.html
@@ -6,7 +6,7 @@
    }
 </script>
 {% if not isSignedUp %}
-    <div>Contact</div>
+    <h3>Contact</h3>
     <form id="emailForm" action="" method="post">
         {% csrf_token %}
         {% render_text_input form.email %}
