--- a/rateloaf/templates/rateloaf/shared/head.html
+++ b/rateloaf/templates/rateloaf/shared/head.html
@@ -47,3 +47,4 @@
 <link rel="stylesheet" href="{% static 'css/pico.min.css'|local_static:APP_DIRECTORY %}" />
 <link rel="stylesheet" href="{% static 'css/styles.css'|local_static:APP_DIRECTORY %}" />
 
+<link rel="stylesheet" href="{% static 'css/catclock.css'|local_static:APP_DIRECTORY %}">
