--- a/rateloaf/static/rateloaf/css/styles.css
+++ b/rateloaf/static/rateloaf/css/styles.css
@@ -94,3 +94,117 @@
 .navButtonLink {
   margin-left: -5px;
 }
+
+#drop{
+  border: 2px dashed #bbb;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  padding: 25px;
+  margin-bottom: 20px;
+  width: 400px;
+  font: 20pt bold,"Vollkorn";color:#bbb
+}
+
+.wait {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  color: white;
+  width: 70%;
+}
+
+.mySlides {
+  display: none;
+  text-align: center;
+}
+
+img {
+  vertical-align: middle;
+}
+
+.slideshow-container {
+  max-width: 600px;
+  position: relative;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev {
+  left: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+
+.slideshowDescription {
+  color: #f2f2f2;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 3px;
+  width: 100%;
+}
+
+.slideshowTitle {
+  color: #f2f2f2;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+
+.IN-widget {
+  margin-bottom: 5px;
+}
