design applied to pro

--- a/rateloaf/static/rateloaf/css/styles.css
+++ b/rateloaf/static/rateloaf/css/styles.css
@@ -103,7 +103,9 @@
   padding: 25px;
   margin-bottom: 20px;
   width: 400px;
-  font: 20pt bold,"Vollkorn";color:#bbb
+  font: 20pt bold,"Vollkorn";
+  color: #bbb;
+  text-align: center;
 }
 
 .wait {
@@ -206,5 +208,105 @@ img {
 }
 
 .IN-widget {
-  margin-bottom: 5px;
+  margin-bottom: 5px !important;
+}
+
+
+.image-container {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.perfection-container {
+  position: relative;
+  width: 400px;
+  height: 200px;
+  background-color: black;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.title {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  color: white;
+  color: #fff;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff2d95, 0 0 30px #ff2d95, 0 0 40px #ff2d95, 0 0 50px #ff2d95, 0 0 75px #ff2d95;
+  letter-spacing: 5px;
+  font: 20px 'MisoRegular';
+  padding: 10px;
+  max-width: 80%;
+  text-align: center;
+  font-family: 'Comic Sans MS';
+}
+
+.blemish {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  font-size: 18px;
+  max-width: 80%;
+  text-align: center;
+}
+
+.description {
+  width: 400px;
+  color: white;
+  padding: 10px;
+  font-size: 18px;
+  background-color: gray;
+  max-width: 80%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Comic Sans MS';
+  text-shadow: 2px 2px 8px #000;
+}
+
+.perfection {
+  width: 300px;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  color: #fff;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff2d95, 0 0 30px #ff2d95, 0 0 40px #ff2d95, 0 0 50px #ff2d95, 0 0 75px #ff2d95;
+  letter-spacing: 5px;
+  font: 20px 'MisoRegular';
+  padding: 30px;
+  max-width: 80%;
+  text-align: center;
+  font-family: 'Comic Sans MS';
+}
+
+.clearance-tape {
+  padding: 1.5rem;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  background: repeating-linear-gradient(
+      -45deg,
+      #f2a417,
+      #f2a417 15px,
+      #141617 15px,
+      #141617 30px
+  );
 }
