--- a/rateloaf/templates/rateloaf/index.html
+++ b/rateloaf/templates/rateloaf/index.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="pico container">
             {% include "./shared/top_nav.html" %}
             <h1>Rate how well your cat sits like bread</h1>
 
