--- a/XXXXX_signedin/templates/XXXXX_signedin/shared/head.html
+++ b/XXXXX_signedin/templates/XXXXX_signedin/shared/head.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% load static_tags %}
 <title>{{ HOST }}</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{ HOST }}">
 <meta property="og:title" content="{{ HOST }}" />
 <meta property="og:type" content="website" />
